--- a/css/style.css
+++ b/css/style.css
@@ -70,19 +70,34 @@ header a{
     border: solid 1px black;
     border-radius: 3rem;
     background-color: rgba(48, 52, 54,0.7);
-    padding: 8px;
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
+    overflow: scroll;
+    scroll-behavior: smooth;
+    flex-direction: column;
+    align-items: center;
+}
+.toffle::-webkit-scrollbar{
+    width: 8px;
+    height: 100%;
+}
+.toffle::-webkit-scrollbar-track{
+    margin-block: 3.5rem;
+}
+.toffle::-webkit-scrollbar-thumb{
+    background-color: rgba(227, 227, 227, 0.14);
+    border-radius: 10px;
+}
+.toffle::-webkit-scrollbar-thumb:hover{
+    background-color: rgba(227,227,227,.18);
 }
 .toffle ul{
     background-color: #171717;
-    border: solid 1px black;    
-    border-radius: 2.8rem;
-    padding: 20px;
-    height: 100%;
+    padding: 20px 30px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-content: flex-start;
-    gap: 1rem;
+    gap: 1rem; 
 }
 .toffle ul li{
     display: flex;
@@ -101,10 +116,39 @@ header a{
     justify-content: center;
     color: white;
     text-decoration: none;
+    text-align: center;
+    text-overflow: clip;
     font-size: 1.5rem;
     gap: 0.8rem;
     width: 80px;
     height: 80px;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+.toffle ul li a:hover{
+    overflow-wrap: anywhere;
+}
+.toffle_ul_top{
+    border-top-left-radius: 2.8rem;
+    border-top-right-radius: 2.8rem;
+    margin-bottom: .5rem;
+}
+.toffle_ul_bottom{
+    border-bottom-left-radius: 2.8rem;
+    border-bottom-right-radius: 2.8rem;
+}
+.toffle_a_bottom{
+    font-size: 1,5rem;
+    margin: 2rem 0;
+    padding: 1rem 2rem;
+    border: solid 1px #8e918f;
+    border-radius: 2.5rem;
+    color: #a8c7fa;
+}
+.toffle_a_bottom:hover{
+    text-decoration: none;
+    background-color: #90acda28;
+    transition: all .7s ease-in-out;
 }
 
 section{
@@ -175,6 +219,9 @@ section{
 .searcher_expandible ul li:hover{
     background-color: rgb(62, 65, 71);
 }
+.searcher_expandible ul li:hover a{
+    display: block;
+}
 .bg_Clock{
     background-image: url('../images/clock.svg');
     width: 20px;
@@ -188,6 +235,7 @@ section{
     font-size: 1.6rem;
 }
 .searcher_expandible ul li a{
+    display: none;
     color: #9aa0a6;
     font-size: 1.3rem;
 }
