--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ header a{
     border-radius: 5rem;
 }
 .btnApp{
-    background-image: url('../images/app_simbol.svg');
+    background-image: url('../images/header_chocolate_symbol.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 2.4rem;
@@ -112,29 +112,30 @@ header a{
 .toffle ul li a{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
     color: white;
     text-decoration: none;
-    text-align: center;
-    text-overflow: clip;
-    font-size: 1.5rem;
     gap: 0.8rem;
     width: 80px;
-    height: auto;
+    height: 90px;
     padding: 10px 0;
-    overflow: hidden;
 }
-.toffle ul li a:hover{
-    overflow-wrap: anywhere;
-    height: auto;
+.toffle ul li a span{
+    align-self: center;
+    text-align: center;
+    font-size: 1.4rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 90%;
+    height: 19px;
 }
 .toffleImg{
-    width: 40px;
-    height: 40px;
+    align-self: center;
+    width: 4rem;
+    height: 4rem;
 }
 .toffleImgprofile{
+    align-self: center;
+    width: 4rem;
     border-radius: 50%;
 }
 .toffle_ul_top{
