--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@ section{
     display: flex;
     flex-direction: column;
     width: 100%;
+    max-width: 62rem;
     align-items: center;
 }
 .section_searcher{
@@ -192,11 +193,11 @@ section{
 }
 .section_searcher:hover {
     background-color: rgb(46, 48, 53);
-    border: solid 1px black;
+    border: solid 1px rgba(0, 0, 0, 0.3);
 }
 .section_searcher__focuses{
     background-color: rgb(46, 48, 53);
-    border: solid 1px black;
+    border: solid 1px rgba(0, 0, 0, 0.3);
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     border-bottom-left-radius: 0;
@@ -209,10 +210,11 @@ section{
     width: 100%;
     max-width: 58.4rem;
     background-color: rgb(46, 48, 53);
-    border: solid 1px black;
+    border: solid 1px rgba(0, 0, 0, 0.3);
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
     border-top: none;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
 }
 .searcher_expandible ul{
     margin-top: 5px;
@@ -223,7 +225,7 @@ section{
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    padding: 0 15px;
+    padding: 0 20px;
     height: 3rem;
 }
 .searcher_expandible ul li:hover{
@@ -234,15 +236,15 @@ section{
 }
 .bg_Clock{
     background-image: url('../images/clock.svg');
-    width: 20px;
-    height: 20px;
+    width: 14px;
+    height: 14px;
     background-repeat: no-repeat;
     background-position: center;
 }
 .searcher_expandible ul li span{
     color: rgb(197, 138, 249);
     flex-grow: 1;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
 }
 .searcher_expandible ul li a{
     display: none;
@@ -282,7 +284,8 @@ section{
 }
 .section_buttonsContainer{
     max-width: 58.4rem;
-    margin:15px 0;
+    margin-top:20px;
+    margin-bottom: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -308,6 +311,9 @@ section{
 }
 .section_buttonsContainer small a{
     color: #8ab4f8;
+}
+.searcher_expandible .section_buttonsContainer .buttonsContainer_button{
+    background-color: rgb(60, 61, 65);
 }
 footer{
     color: rgb(153, 157, 162);
