--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ section{
     border-bottom-right-radius: 25px;
     border-top: none;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+    margin-bottom: 3rem;
 }
 .searcher_expandible ul{
     margin-top: 5px;
